spring fundamentals march 2026